Update issue 75
Everything ready on core & client, let's move to console...


git-svn-id: https://svn.apache.org/repos/asf/incubator/syncope/trunk@1247187 13f79535-47bb-0310-9956-ffa450edef68