@@ -37,13 +37,13 @@ import org.syncope.core.util.EntitlementUtil;
 import org.syncope.types.SchemaType;
 
 public class AuthenticationTestITCase extends AbstractTest {
-
+    
     @Test
     public void testEntitlements() {
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials("user1", "password"));
-
+        
         String[] entsArray = restTemplate.getForObject(BASE_URL
                 + "auth/entitlements.json", String[].class);
         Set<String> authEnts = new HashSet<String>(entsArray.length);
@@ -57,7 +57,7 @@ public class AuthenticationTestITCase extends AbstractTest {
 
         // reset admin credentials for restTemplate
         super.setupRestTemplate();
-
+        
         Set<String> dbEnts = new HashSet<String>();
         dbEnts.add("base");
         dbEnts.add("advanced");
@@ -69,10 +69,10 @@ public class AuthenticationTestITCase extends AbstractTest {
         for (RoleTO roleTO : roleTOs) {
             dbEnts.add(EntitlementUtil.getEntitlementName(roleTO.getId()));
         }
-
+        
         assertEquals(authEnts, dbEnts);
     }
-
+    
     @Test
     public void testUserSchemaAuthorization() {
         // 0. create a role that can only read schemas
@@ -80,7 +80,7 @@ public class AuthenticationTestITCase extends AbstractTest {
         authRoleTO.setName("authRole");
         authRoleTO.setParent(8L);
         authRoleTO.addEntitlement("SCHEMA_READ");
-
+        
         authRoleTO = restTemplate.postForObject(BASE_URL + "role/create",
                 authRoleTO, RoleTO.class);
         assertNotNull(authRoleTO);
@@ -90,14 +90,14 @@ public class AuthenticationTestITCase extends AbstractTest {
         schemaTO.setName("authTestSchema");
         schemaTO.setMandatoryCondition("false");
         schemaTO.setType(SchemaType.String);
-
+        
         SchemaTO newSchemaTO = restTemplate.postForObject(BASE_URL
                 + "schema/user/create", schemaTO, SchemaTO.class);
         assertEquals(schemaTO, newSchemaTO);
 
         // 2. create an user with the role created above (as admin)
         UserTO userTO = UserTestITCase.getSampleTO("auth@test.org");
-
+        
         MembershipTO membershipTO = new MembershipTO();
         membershipTO.setRoleId(authRoleTO.getId());
         AttributeTO testAttributeTO = new AttributeTO();
@@ -105,7 +105,7 @@ public class AuthenticationTestITCase extends AbstractTest {
         testAttributeTO.addValue("a value");
         membershipTO.addAttribute(testAttributeTO);
         userTO.addMembership(membershipTO);
-
+        
         userTO = restTemplate.postForObject(
                 BASE_URL + "user/create", userTO, UserTO.class);
         assertNotNull(userTO);
@@ -120,7 +120,7 @@ public class AuthenticationTestITCase extends AbstractTest {
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "password123"));
-
+        
         schemaTO = restTemplate.getForObject(BASE_URL
                 + "schema/user/read/authTestSchema.json", SchemaTO.class);
         assertNotNull(schemaTO);
@@ -138,19 +138,19 @@ public class AuthenticationTestITCase extends AbstractTest {
 
         // reset admin credentials for restTemplate
         super.setupRestTemplate();
-
+        
         userTO = restTemplate.getForObject(BASE_URL + "user/read/{userId}.json",
                 UserTO.class, userTO.getId());
-
+        
         assertNotNull(userTO);
         assertNotNull(userTO.getLastLoginDate());
         assertEquals(new Integer(0), userTO.getFailedLogins());
     }
-
+    
     @Test
     public void testUserRead() {
         UserTO userTO = UserTestITCase.getSampleTO("testuserread@test.org");
-
+        
         MembershipTO membershipTO = new MembershipTO();
         membershipTO.setRoleId(7L);
         AttributeTO testAttributeTO = new AttributeTO();
@@ -158,24 +158,24 @@ public class AuthenticationTestITCase extends AbstractTest {
         testAttributeTO.addValue("a value");
         membershipTO.addAttribute(testAttributeTO);
         userTO.addMembership(membershipTO);
-
+        
         userTO = restTemplate.postForObject(
                 BASE_URL + "user/create", userTO, UserTO.class);
         assertNotNull(userTO);
-
+        
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "password123"));
-
+        
         UserTO readUserTO = restTemplate.getForObject(
                 BASE_URL + "user/read/{userId}.json", UserTO.class, 1);
         assertNotNull(readUserTO);
-
+        
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials("user2", "password"));
-
+        
         HttpClientErrorException exception = null;
         try {
             restTemplate.getForObject(
@@ -189,11 +189,11 @@ public class AuthenticationTestITCase extends AbstractTest {
         // reset admin credentials for restTemplate
         super.setupRestTemplate();
     }
-
+    
     @Test
     public void testUserSearch() {
         UserTO userTO = UserTestITCase.getSampleTO("testusersearch@test.org");
-
+        
         MembershipTO membershipTO = new MembershipTO();
         membershipTO.setRoleId(7L);
         AttributeTO testAttributeTO = new AttributeTO();
@@ -201,21 +201,21 @@ public class AuthenticationTestITCase extends AbstractTest {
         testAttributeTO.addValue("a value");
         membershipTO.addAttribute(testAttributeTO);
         userTO.addMembership(membershipTO);
-
+        
         userTO = restTemplate.postForObject(BASE_URL + "user/create",
                 userTO, UserTO.class);
         assertNotNull(userTO);
-
+        
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "password123"));
-
+        
         AttributeCond isNullCond = new AttributeCond(
                 AttributeCond.Type.ISNOTNULL);
         isNullCond.setSchema("loginDate");
         NodeCond searchCondition = NodeCond.getLeafCond(isNullCond);
-
+        
         List<UserTO> matchedUsers = Arrays.asList(
                 restTemplate.postForObject(BASE_URL + "user/search",
                 searchCondition, UserTO[].class));
@@ -226,11 +226,11 @@ public class AuthenticationTestITCase extends AbstractTest {
             userIds.add(user.getId());
         }
         assertTrue(userIds.contains(1L));
-
+        
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials("user2", "password"));
-
+        
         matchedUsers = Arrays.asList(
                 restTemplate.postForObject(BASE_URL + "user/search",
                 searchCondition, UserTO[].class));
@@ -244,12 +244,12 @@ public class AuthenticationTestITCase extends AbstractTest {
         // reset admin credentials for restTemplate
         super.setupRestTemplate();
     }
-
+    
     @Test
     public void checkFailedLogins() {
         UserTO userTO =
                 UserTestITCase.getSampleTO("checkFailedLogin@syncope-idm.org");
-
+        
         MembershipTO membershipTO = new MembershipTO();
         membershipTO.setRoleId(7L);
         AttributeTO testAttributeTO = new AttributeTO();
@@ -257,20 +257,20 @@ public class AuthenticationTestITCase extends AbstractTest {
         testAttributeTO.addValue("a value");
         membershipTO.addAttribute(testAttributeTO);
         userTO.addMembership(membershipTO);
-
+        
         userTO = restTemplate.postForObject(
                 BASE_URL + "user/create", userTO, UserTO.class);
         assertNotNull(userTO);
-
+        
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "password123"));
-
+        
         UserTO readUserTO = restTemplate.getForObject(
                 BASE_URL + "user/read/{userId}.json",
                 UserTO.class, userTO.getId());
-
+        
         assertNotNull(readUserTO);
         assertNotNull(readUserTO.getFailedLogins());
         assertEquals(new Integer(0), readUserTO.getFailedLogins());
@@ -281,9 +281,9 @@ public class AuthenticationTestITCase extends AbstractTest {
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "wrongpwd1"));
-
+        
         Throwable t = null;
-
+        
         try {
             restTemplate.getForObject(
                     BASE_URL + "user/read/{userId}.json",
@@ -292,10 +292,10 @@ public class AuthenticationTestITCase extends AbstractTest {
         } catch (Exception e) {
             t = e;
         }
-
+        
         assertNotNull(t);
         t = null;
-
+        
         try {
             restTemplate.getForObject(
                     BASE_URL + "user/read/{userId}.json",
@@ -307,19 +307,19 @@ public class AuthenticationTestITCase extends AbstractTest {
 
         // reset admin credentials for restTemplate
         super.setupRestTemplate();
-
+        
         readUserTO = restTemplate.getForObject(
                 BASE_URL + "user/read/{userId}.json",
                 UserTO.class, userTO.getId());
         assertNotNull(readUserTO);
         assertNotNull(readUserTO.getFailedLogins());
         assertEquals(new Integer(2), readUserTO.getFailedLogins());
-
+        
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "password123"));
-
+        
         readUserTO = restTemplate.getForObject(
                 BASE_URL + "user/read/{userId}.json",
                 UserTO.class, userTO.getId());
@@ -327,12 +327,12 @@ public class AuthenticationTestITCase extends AbstractTest {
         assertNotNull(readUserTO.getFailedLogins());
         assertEquals(new Integer(0), readUserTO.getFailedLogins());
     }
-
+    
     @Test
     public void checkUserSuspension() {
         UserTO userTO =
                 UserTestITCase.getSampleTO("checkSuspension@syncope-idm.org");
-
+        
         MembershipTO membershipTO = new MembershipTO();
         membershipTO.setRoleId(7L);
         AttributeTO testAttributeTO = new AttributeTO();
@@ -340,23 +340,23 @@ public class AuthenticationTestITCase extends AbstractTest {
         testAttributeTO.addValue("a value");
         membershipTO.addAttribute(testAttributeTO);
         userTO.addMembership(membershipTO);
-
+        
         userTO = restTemplate.postForObject(
                 BASE_URL + "user/create", userTO, UserTO.class);
         assertNotNull(userTO);
-
+        
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "password123"));
-
+        
         userTO = restTemplate.getForObject(
                 BASE_URL + "user/read/{userId}.json",
                 UserTO.class, userTO.getId());
-
+        
         assertNotNull(userTO);
         assertNotNull(userTO.getFailedLogins());
-        assertEquals(new Integer(0), userTO.getFailedLogins());
+        assertEquals(Integer.valueOf(0), userTO.getFailedLogins());
 
         // authentications failed ...
 
@@ -364,9 +364,9 @@ public class AuthenticationTestITCase extends AbstractTest {
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "wrongpwd1"));
-
+        
         Throwable t = null;
-
+        
         try {
             restTemplate.getForObject(
                     BASE_URL + "user/read/{userId}.json",
@@ -374,10 +374,10 @@ public class AuthenticationTestITCase extends AbstractTest {
         } catch (Exception e) {
             t = e;
         }
-
+        
         assertNotNull(t);
         t = null;
-
+        
         try {
             restTemplate.getForObject(
                     BASE_URL + "user/read/{userId}.json",
@@ -385,10 +385,10 @@ public class AuthenticationTestITCase extends AbstractTest {
         } catch (Exception e) {
             t = e;
         }
-
+        
         assertNotNull(t);
         t = null;
-
+        
         try {
             restTemplate.getForObject(
                     BASE_URL + "user/read/{userId}.json",
@@ -396,27 +396,27 @@ public class AuthenticationTestITCase extends AbstractTest {
         } catch (Exception e) {
             t = e;
         }
-
+        
         assertNotNull(t);
         t = null;
 
         // reset admin credentials for restTemplate
         super.setupRestTemplate();
-
+        
         userTO = restTemplate.getForObject(
                 BASE_URL + "user/read/{userId}.json",
                 UserTO.class, userTO.getId());
-
+        
         assertNotNull(userTO);
         assertNotNull(userTO.getFailedLogins());
-        assertEquals(new Integer(3), userTO.getFailedLogins());
+        assertEquals(Integer.valueOf(3), userTO.getFailedLogins());
 
         // last authentication before suspension
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "wrongpwd1"));
-
+        
         try {
             restTemplate.getForObject(
                     BASE_URL + "user/read/{userId}.json",
@@ -424,17 +424,17 @@ public class AuthenticationTestITCase extends AbstractTest {
         } catch (Exception e) {
             t = e;
         }
-
+        
         assertNotNull(t);
         t = null;
 
         // reset admin credentials for restTemplate
         super.setupRestTemplate();
-
+        
         userTO = restTemplate.getForObject(
                 BASE_URL + "user/read/{userId}.json",
                 UserTO.class, userTO.getId());
-
+        
         assertNotNull(userTO);
         assertNotNull(userTO.getFailedLogins());
         assertEquals(new Integer(3), userTO.getFailedLogins());
@@ -446,7 +446,7 @@ public class AuthenticationTestITCase extends AbstractTest {
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "password123"));
-
+        
         try {
             restTemplate.getForObject(
                     BASE_URL + "user/read/{userId}.json",
@@ -455,28 +455,28 @@ public class AuthenticationTestITCase extends AbstractTest {
         } catch (Exception e) {
             t = e;
         }
-
+        
         assertNotNull(t);
         t = null;
 
         // reset admin credentials for restTemplate
         super.setupRestTemplate();
-
+        
         userTO = restTemplate.getForObject(
                 BASE_URL + "user/reactivate/" + userTO.getId(), UserTO.class);
-
+        
         assertNotNull(userTO);
         assertEquals("active", userTO.getStatus());
-
+        
         ((CommonsClientHttpRequestFactory) restTemplate.getRequestFactory()).
                 getHttpClient().getState().setCredentials(AuthScope.ANY,
                 new UsernamePasswordCredentials(
                 userTO.getUsername(), "password123"));
-
+        
         userTO = restTemplate.getForObject(
                 BASE_URL + "user/read/{userId}.json",
                 UserTO.class, userTO.getId());
-
+        
         assertNotNull(userTO);
         assertEquals(new Integer(0), userTO.getFailedLogins());
     }
